tests/lean/626c.lean.expected.out
626c.lean:2:27: error: don't know how to synthesize placeholder
c : C⁽
⊢ C⁽ → Type
626c.lean:2:40: error: don't know how to synthesize placeholder
c : C⁽
⊢ ?M_1
626c.lean:2:42: error: don't know how to synthesize placeholder
c : C⁽
⊢ Π (a : C⁽),
    ?M_1 → ?M_1
626c.lean:2:27: error: failed to add declaration 'foo' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  λ (c : C⁽),
    nat.rec_on c ?M_2 ?M_3
626c.lean:5:27: error: don't know how to synthesize placeholder
c : α⁽
⊢ α⁽ → Type
626c.lean:5:40: error: don't know how to synthesize placeholder
c : α⁽
⊢ ?M_1
626c.lean:5:42: error: don't know how to synthesize placeholder
c : α⁽
⊢ Π (a : α⁽),
    ?M_1 → ?M_1
626c.lean:5:27: error: failed to add declaration 'foo' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  λ (c : α⁽),
    nat.rec_on c ?M_2 ?M_3
626c.lean:8:27: error: don't know how to synthesize placeholder
c : _⁽
⊢ _⁽ → Type
626c.lean:8:40: error: don't know how to synthesize placeholder
c : _⁽
⊢ ?M_1
626c.lean:8:42: error: don't know how to synthesize placeholder
c : _⁽
⊢ Π (a : _⁽),
    ?M_1 → ?M_1
626c.lean:8:27: error: failed to add declaration 'foo' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  λ (c : _⁽),
    nat.rec_on c ?M_2 ?M_3
626c.lean:11:28: error: don't know how to synthesize placeholder
c : C.⁽
⊢ C.⁽ → Type
626c.lean:11:41: error: don't know how to synthesize placeholder
c : C.⁽
⊢ ?M_1
626c.lean:11:43: error: don't know how to synthesize placeholder
c : C.⁽
⊢ Π (a : C.⁽),
    ?M_1 → ?M_1
626c.lean:11:28: error: failed to add declaration 'foo' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  λ (c : C.⁽),
    nat.rec_on c ?M_2 ?M_3
626c.lean:14:29: error: don't know how to synthesize placeholder
c : C⁽C⁽
⊢ C⁽C⁽ → Type
626c.lean:14:42: error: don't know how to synthesize placeholder
c : C⁽C⁽
⊢ ?M_1
626c.lean:14:44: error: don't know how to synthesize placeholder
c : C⁽C⁽
⊢ Π (a : C⁽C⁽),
    ?M_1 → ?M_1
626c.lean:14:29: error: failed to add declaration 'foo' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  λ (c : C⁽C⁽),
    nat.rec_on c ?M_2 ?M_3
